basic video details page with list in the side ready

--- a/client/components/video/video.css
+++ b/client/components/video/video.css
@@ -30,6 +30,10 @@
     height: 325px;
 }
 
+.selected-video {
+    border: 5px solid green;
+}
+
 /* styles for '...' */
 .ellipsis {
   overflow: hidden;
